--- a/api/advisories/models/advisories.settings.json
+++ b/api/advisories/models/advisories.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "advisories",
   "info": {
-    "name": "advisories",
+    "name": "goc-tu-van",
     "description": ""
   },
   "options": {
